[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Piece.gd" type="Script" id=1]
[ext_resource path="res://art/piece_tile.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 22, 22 )

[node name="PieceContainer" type="CenterContainer"]
margin_right = 88.0
margin_bottom = 88.0
rect_min_size = Vector2( 88, 88 )
mouse_filter = 2

[node name="Piece" type="Area2D" parent="."]
position = Vector2( 44, 44 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Piece"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Piece"]
modulate = Color( 0.239216, 0.388235, 0.866667, 1 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )

[connection signal="body_entered" from="Piece" to="Piece" method="_on_Piece_body_entered"]
[connection signal="body_exited" from="Piece" to="Piece" method="_on_Piece_body_exited"]
[connection signal="input_event" from="Piece" to="Piece" method="_on_Piece_input_event"]
